--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChatApp</string>
+    <string name="Iniciar_Sesion">Iniciar Sesion</string>
+    <string name="Registrarse">Registrarse</string>
+
 </resources>
